Fixed text wrap on schedule grid elements

--- a/application/static/style.css
+++ b/application/static/style.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: #fff;
+    color: #000;
 }
 
 h3 {
@@ -24,7 +25,7 @@ a {
 }
 
 a:hover {
-    color: #444;
+    color: #222;
     text-decoration: none;
 }
 
@@ -65,11 +66,11 @@ a:hover {
 
 .parking_lot {
     text-align: center;
-    padding: 10px;
-    border: 1.5px dotted #888;
+    padding: 6px;
+    border: 2px dotted #888;
     border-radius: 5px;
 
-    height: 94%;
+    height: 100%;
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -79,7 +80,7 @@ a:hover {
     display: none;
   }
 
-.parking_lot li {
+.parking_lot .work_order {
     width: auto;
     height: auto;
     min-width: 160px;
@@ -92,8 +93,8 @@ a:hover {
 .parking_lot_header {
     font-size: 1.2em;
     font-weight: bold;
-    color: #000;
     text-align: center;
+    margin-block: 8px;
     /* width: auto; */
 }
 
@@ -126,17 +127,9 @@ a:hover {
 } */
 
 /* GENERAL ITEM SETUP */
-.schedule li {
-    padding: 1em;
-}
-
-.schedule a {
-    position: relative;
-}
 
 /* SCHEDULE BLOCKS */
 .corner {
-    color: #000;
     background-color: #fff;
     font-weight: bold;
     text-align: center;
@@ -144,11 +137,11 @@ a:hover {
     margin-top: 10px;
     margin-inline: 2px;
     font-size: .75em;
+    margin-right: 8px;
 }
 
 .weekday_header {
     background-color: #fff;
-    color: #000;
 
     text-align: center;
     font-weight: bolder;
@@ -158,11 +151,6 @@ a:hover {
 }
 
 .machine_index {
-    /* background-color: #eee; */
-    color: #000;
-
-    margin-right: 8px;
-    /* margin-block: 10px; */
 
     line-height: 80px;
     font-size: 1.5em;
@@ -170,9 +158,6 @@ a:hover {
 
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-    /* border-radius: 20px; */
-    /* border: 1px solid #aaa; */
 }
 
 /* HOUR TYPES */
@@ -202,23 +187,27 @@ a:hover {
 
 /* WORK ORDER TYPES */
 .work_order {
-    width: auto;
-    font-weight: bold;
-    text-align: center;
     list-style: none;
+
+    width: auto;
     height: 60px;
-    line-height: 17px;
-    
+    line-height: 56px;
+
     margin-block: 10px;
     border-radius: 35px;
 
+    text-align: center;
+    font-weight: bold;
+    overflow: hidden;
+
+    padding-inline: 8px;
+
     z-index: 2;
     opacity: .80;
-
 }
 
 .schedule .work_order {
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .work_order.week_start {
@@ -304,7 +293,7 @@ a:hover {
     background-color: #cccccc60;
 }
 
-/* #region WEEKDAY SELECTORS */
+/* WEEKDAY SELECTORS */
 .mon {
     grid-row: weekday_header;
     grid-column: 2 / span 24;
@@ -339,7 +328,6 @@ a:hover {
     grid-row: weekday_header;
     grid-column: 146 / span 24;
 }
-/* # endregion */
 
 /* MACHINE SELECTORS */
 .line_5 {
